first version of the heroes added on the battlegrounds view

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/menu.css" rel="stylesheet">
     <link href="css/navbar.css" rel="stylesheet">
+    <link href="css/battleground.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -27,6 +28,11 @@
     <script src="js/data/heroes.js"></script>
     <script src="js/controllers/heroes.js"></script>
     <script src="js/services/heroes.js"></script>
+
+    <!-- BATTLEGROUNDS -->
+    <script src="js/data/battlegrounds.js"></script>
+    <script src="js/controllers/battlegrounds.js"></script>
+    <script src="js/services/battlegrounds.js"></script>
   </head>
   <body ng-app="starter">
     <!--
